--- a/.config/i3/config
+++ b/.config/i3/config
@@ -61,7 +61,7 @@ hide_edge_borders both
 floating_modifier $mod
 
 # start a terminal:
-bindsym $mod+Return exec xfce4-terminal
+bindsym $mod+Return exec alacritty
 
 # kill focused window:
 bindsym $mod+c kill
