--- a/.config/i3/config
+++ b/.config/i3/config
@@ -136,8 +136,8 @@ set $ws5 ""
 bindsym $mod+s exec --no-startup-id ~/.config/i3/scripts/empty_workspace.sh
 
 # autostart start applications + bind program to workspace:
-assign [class="Xfce4-terminal"] $ws1
-for_window [class=Xfce4-terminal] focus
+assign [class="Alacritty"] $ws1
+for_window [class=Alacritty] focus
 assign [class="(?i)firefox"] $ws2
 for_window [class=(?i)firefox] focus
 assign [class="Thunar"] $ws3
