Turn off beep sound and add battery status to i3blocks

--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -103,6 +103,10 @@ color=#88C0D0
 instance=Master
 interval=1
 
+[battery]
+command=~/.config/i3/scripts/battery.sh
+interval=30
+
 [pavucontrol]
 full_text=
 color=#88C0D0
