--- a/.config/i3/config
+++ b/.config/i3/config
@@ -51,11 +51,11 @@ exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 # font, it doesn’t scale on retina/hidpi displays.
 font pango:Noto Sans Regular 10
 
-# only border when 1 window
-smart_borders on
+for_window [class="^.*"] border pixel 0
+#smart_borders on
 
 # thin borders:
-hide_edge_borders both
+#hide_edge_borders both
 
 # Use Mouse+$mod to drag floating windows to their wanted position:
 floating_modifier $mod
@@ -158,7 +158,7 @@ exec --no-startup-id dex -a -s /etc/xdg/autostart/:~/.config/autostart
 
 # transparency:
 #exec --no-startup-id xcompmgr -c
-exec --no-startup-id picom -cC
+exec --no-startup-id picom 
 
 #set wallpaper:
 exec --no-startup-id nitrogen --restore
@@ -286,7 +286,7 @@ set $indicator-color     #a0a0a0
 
 # set window colors:
 #                       border             background         text                 indicator
-client.focused          $bg-color          $bg-color          $text-color          $indicator-color
+#client.focused          $bg-color          $bg-color          $text-color          $indicator-color
 client.unfocused        $inactive-bg-color $inactive-bg-color $inactive-text-color $indicator-color
 client.focused_inactive $inactive-bg-color $inactive-bg-color $inactive-text-color $indicator-color
 client.urgent           $urgent-bg-color   $urgent-bg-color   $text-color          $indicator-color
