--- a/.config/i3/config
+++ b/.config/i3/config
@@ -140,6 +140,8 @@ assign [class="Alacritty"] $ws1
 for_window [class=Alacritty] focus
 assign [class="(?i)firefox"] $ws2
 for_window [class=(?i)firefox] focus
+assign [class="(?i)google-chrome"] $ws2
+for_window [class=(?i)google-chrome] focus
 assign [class="Thunar"] $ws3
 for_window [class=Thunar] focus
 assign [class="Thunderbird"] $ws4
@@ -154,6 +156,10 @@ assign [class="jetbrains-idea"] $ws3
 for_window [class=jetbrains-idea] focus
 assign [class="NordPass"] $ws9
 for_window [class=NordPass] focus
+assign [class="Insomnia"] $ws6
+for_window [class=Insomnia] focus
+assign [class="ops"] $ws9
+for_window [class=ops] focus
 
 
 # Autostart apps:
@@ -275,7 +281,7 @@ bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioPrev exec playerctl previous
 
 # App shortcuts
-bindsym $mod+w exec "/usr/bin/firefox"
+bindsym $mod+w exec "/usr/bin/google-chrome-stable"
 bindsym $mod+n exec "/usr/bin/thunar"
 bindsym Print exec "scrot ~/%Y-%m-%d-%T-screenshot.png"
 
