Nordpass be gone

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -154,8 +154,8 @@ assign [class="Microsoft Teams - Preview"] $ws4
 for_window [class="Microsoft Teams - Preview"] focus
 assign [class="jetbrains-idea"] $ws3
 for_window [class=jetbrains-idea] focus
-assign [class="NordPass"] $ws9
-for_window [class=NordPass] focus
+assign [class="1Password"] $ws9
+for_window [class=1Password] focus
 assign [class="Insomnia"] $ws6
 for_window [class=Insomnia] focus
 assign [class="ops"] $ws9
