Change term font to Source Code Pro and add treesitter context plugin

--- a/.alacritty.yml
+++ b/.alacritty.yml
@@ -10,6 +10,21 @@
 env:
   WINIT_X11_SCALE_FACTOR: "1.0"
 
+font:
+  normal:
+    family: Source Code Pro
+    style: Regular
+    bold:
+    family: Source Code Pro
+    style: Bold
+  italic:
+    family: Source Code Pro
+    style: Italic
+  bold_italic:
+    family: Source Code Pro
+    style: Bold Italic
+  size: 11
+
 colors:
   primary:
     background: '#2e3440'
