--- a/.alacritty.yml
+++ b/.alacritty.yml
@@ -27,50 +27,26 @@ font:
 
 colors:
   primary:
-    background: '#2e3440'
-    foreground: '#d8dee9'
-    dim_foreground: '#a5abb6'
+    background: '#161616'
+    foreground: '#ffffff'
   cursor:
-    text: '#2e3440'
-    cursor: '#d8dee9'
-  vi_mode_cursor:
-    text: '#2e3440'
-    cursor: '#d8dee9'
-  selection:
-    text: CellForeground
-    background: '#4c566a'
-  footer_bar:
-      background: '#434c5e'
-      foreground: '#d8dee9'
-  search:
-    matches:
-      foreground: CellBackground
-      background: '#88c0d0'
+    cursor: '#dde1e6'
   normal:
-    black: '#3b4252'
-    red: '#bf616a'
-    green: '#a3be8c'
-    yellow: '#ebcb8b'
-    blue: '#81a1c1'
-    magenta: '#b48ead'
-    cyan: '#88c0d0'
+    black: '#161616'
+    red: '#33b1ff'
+    green: '#ff7eb6'
+    yellow: '#42be65'
+    blue: '#08bdba'
+    magenta: '#82cfff'
+    cyan: '#78a9ff'
     white: '#e5e9f0'
   bright:
-    black: '#4c566a'
-    red: '#bf616a'
-    green: '#a3be8c'
-    yellow: '#ebcb8b'
-    blue: '#81a1c1'
-    magenta: '#b48ead'
-    cyan: '#8fbcbb'
-    white: '#eceff4'
-  dim:
-    black: '#373e4d'
-    red: '#94545d'
-    green: '#809575'
-    yellow: '#b29e75'
-    blue: '#68809a'
-    magenta: '#8c738c'
-    cyan: '#6d96a5'
-    white: '#aeb3bb'
+    black: '#525252'
+    red: '#33b1ff'
+    green: '#ff7eb6'
+    yellow: '#42be65'
+    blue: '#08bdba'
+    magenta: '#82cfff'
+    cyan: '#78a9ff'
+    white: '#ffffff'
 
