--- a/.config/helix/config.toml
+++ b/.config/helix/config.toml
@@ -3,8 +3,18 @@ theme = "oxocarbon"
 [editor]
 line-number = "relative"
 mouse = false
+bufferline = "multiple"
 
 [editor.cursor-shape]
 insert = "bar"
 normal = "block"
 select = "underline"
+
+[editor.statusline]
+left = ["mode", "spinner"]
+center = ["file-name"]
+right = ["diagnostics", "selections", "position", "file-encoding", "file-line-ending", "file-type"]
+separator = "│"
+mode.normal = "NORMAL"
+mode.insert = "INSERT"
+mode.select = "SELECT"
