--- a/.config/helix/themes/oxocarbon.toml
+++ b/.config/helix/themes/oxocarbon.toml
@@ -4,7 +4,7 @@
 "ui.virtual.whitespace" = "base03"
 "ui.menu" = { fg = "base05", bg = "base01" }
 "ui.menu.selected" = { fg = "base01", bg = "base04" }
-"ui.linenr" = { fg = "base03", bg = "base01" }
+"ui.linenr" = { fg = "base03", bg = "base00" }
 "ui.popup" = { bg = "base01" }
 "ui.window" = { bg = "base01" }
 "ui.linenr.selected" = { fg = "base04", bg = "base01", modifiers = ["bold"] }
@@ -47,13 +47,13 @@
 "diff.delta" = "base09"
 "diff.minus" = "base08"
 
-"diagnostic" = { modifiers = ["underlined"] }
-"ui.gutter" = { bg = "base01" }
+"diagnostic" = { modifiers = ["underlined"], underline = { color = "base0A", style = "curl"} }
+"ui.gutter" = { bg = "base00" }
 "info" = "base0D"
 "hint" = "base03"
 "debug" = "base03"
 "warning" = "base09"
-"error" = "base08"
+"error" = "base0A"
 
 "ui.bufferline" = { fg = "base04", bg = "base00" }
 "ui.bufferline.active" = { fg = "base06", bg = "base01" }
