feat!: update i3status rust config according to v0.30, remove some unused i3 scripts and add whitespace config to helix

--- a/.config/helix/config.toml
+++ b/.config/helix/config.toml
@@ -18,3 +18,8 @@ separator = "│"
 mode.normal = "NORMAL"
 mode.insert = "INSERT"
 mode.select = "SELECT"
+
+[editor.whitespace.render]
+space = "all"
+tab = "none"
+newline = "none"
