--- a/.config/i3status-rust/config.toml
+++ b/.config/i3status-rust/config.toml
@@ -1,21 +1,27 @@
+[theme]
 theme = "oxocarbon.toml"
-icons = "awesome"
+[icons]
+icons = "awesome6"
+
+[[block]]
+block = "service_status"
+service = "docker"
+active_format = " ^icon_docker "
+inactive_format = " no ^icon_docker "
 
 [[block]]
 block = "disk_space"
 path = "/"
-alias = "/"
 info_type = "available"
-unit = "GB"
 interval = 20
 warning = 20.0
 alert = 10.0
+[block.theme_overrides]
+idle_bg = "#78a9ff"
+idle_fg = "#161616"
 
 [[block]]
 block = "memory"
-display_type = "memory"
-format_mem = "{mem_used_percents}"
-format_swap = "{swap_used_percents}"
 [block.theme_overrides]
 idle_bg = "#08bdba"
 idle_fg = "#161616"
@@ -24,14 +30,14 @@ idle_fg = "#161616"
 block = "cpu"
 interval = 1
 [block.theme_overrides]
-idle_bg = "#78a9ff"
+idle_bg = "#3dddb9"
 idle_fg = "#161616"
 
 
 [[block]]
 block = "load"
+format = " $icon 1min avg: $1m.eng(w:4) "
 interval = 1
-format = "{1m}"
 [block.theme_overrides]
 idle_bg = "#33b1ff"
 idle_fg = "#161616"
@@ -46,5 +52,11 @@ idle_fg = "#161616"
 [[block]]
 block = "time"
 interval = 5
-format = "%a %d/%m %R"
+[block.format]
+full = " $icon $timestamp.datetime(f:'%a %Y-%m-%d %R %Z', l:de_DE) "
+short = " $icon $timestamp.datetime(f:%R) "
 
+[[block]]
+block = "pacman"
+signal = 1
+aur_command = "yay -Qua"
