--- a/.config/i3/config
+++ b/.config/i3/config
@@ -158,7 +158,9 @@ assign [class="TelegramDesktop"] $ws5
 for_window [class=TelegramDesktop] focus
 assign [class="Slack"] $ws7
 for_window [class=Slack] focus
-assign [class="Steam"] $ws7
+assign [class="discord"] $ws7
+for_window [class=discord] focus
+assign [class="Steam"] $ws8
 for_window [class=Steam] focus
 
 # teams
